cabal-version: 2.2
name:          zinza
version:       0.1
synopsis:      Typed templates with jinja like syntax
category:      Text, Template
description:
  Typed templates with jinja like syntax. Well-typed templates don't go wrong.

license:       GPL-2.0-or-later
license-file:  LICENSE
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     (c) 2019 Oleg Grenrus
author:        Oleg.Grenrus <oleg.grenrus@iki.fi>
homepage:      https://github.com/phadej/zinza
bug-reports:   https://github.com/phadej/zinza/issues

source-repository head
  type:     git
  location: https://github.com/phadej/zinza.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Zinza
  build-depends:
    , base          ^>=4.11.0.0 || ^>=4.12.0.0 || ^>=4.13.0.0
    , containers
    , parsec
    , transformers

  other-modules:
    Zinza.Check
    Zinza.Class
    Zinza.Errors
    Zinza.Expr
    Zinza.Generic
    Zinza.Indexing
    Zinza.Node
    Zinza.Parser
    Zinza.Pos
    Zinza.Type
    Zinza.Value
    Zinza.Var

test-suite zinza-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tests.hs
  build-depends:
    , base
    , tasty
    , tasty-hunit
    , zinza
